--- a/web/client/themes/default/less/share.less
+++ b/web/client/themes/default/less/share.less
@@ -92,6 +92,13 @@
     .mapstore-switch-panel::-webkit-scrollbar { width: 8px; }
 }
 
+.ms-resizable-modal > .modal-content.share-win > .modal-body > .share-panel-modal-body {
+    padding: 8px;
+    .share-panels {
+        padding-top: 8px;
+    }
+}
+
 #share-container {
     .coordinateRow > div:first-child{
         display: none;
